space navigation hexagons, stop upcoming events overlap with title

--- a/css/default.css
+++ b/css/default.css
@@ -53,7 +53,7 @@ nav {
 .nav-group a {
     position: relative;
     display: flex;
-    margin-bottom: -2em;
+    margin-bottom: -1.7em;
     width: fit-content;
 }
 
@@ -68,8 +68,9 @@ nav {
     width: 7em;
 }
 
+
 .nav-group a.offset{
-    margin-left: 3.5em;
+    margin-left: 3.6em;
 }
 
 .nav-group a:hover .hex, .nav-group a:hover .logo {
@@ -84,7 +85,7 @@ nav {
     font-size: .85em;
     position: absolute;
     color: white;
-    top: 38%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 70%;
@@ -135,6 +136,7 @@ nav {
 }
 
 #upcoming-events-list {
+    padding-top: 1em;
     display: flex;
     flex-direction: column;
 }
@@ -666,6 +668,4 @@ nav {
         width: 100%;
         height: 7em;
     }
-
-
 }
